# dinosaur-game

./: .gitignore  AGENTS.md  Cargo.toml  GIT_HISTORY_AUDIT.md  LICENSE  NEON_DATABASE_AUDIT.md  OPENSOURCE_RECOMMENDATIONS.md  OPEN_SOURCE_READINESS.md  PERSONAL_INFO_AUDIT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  Trunk.toml  bg.tidal  build.rs  deno.json  index.html  just.ts  lefthook.yml  package-lock.json  package.json  worker.js  wrangler.internal.jsonc  wrangler.main.jsonc  wrangler.main.toml  wrangler.nightly.jsonc  wrangler.nightly.toml  wrangler.pr.jsonc  wrangler.pr.toml  wrangler.prod.jsonc  wrangler.prod.toml
.cargo/: config.toml
.github/actions/ci-feedback/: action.yml
.github/workflows/: auto-release.yml  build.yml  ci.yml  cleanup-pr-image.yml  main.yml  preview.yml  release.yml  typos.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  service.rs
crates/api/tests/: health_api.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/tests/: is_health_test.rs
crates/e2e/: Cargo.toml  build.rs
crates/e2e/tests/: bevy_example_test.rs  game_control.rs  render_to_image.rs  time_paused_on_start.rs
crates/game/: Cargo.toml  build.rs
crates/game/src/: app.rs  camera.rs  components.rs  debug.rs  dino.rs  game_control.rs  game_logic.rs  game_over.rs  game_start.rs  ground.rs  lib.rs  main.rs  resources.rs  screens.rs  test_functions.rs  tree.rs  utils.rs  windows_handler.rs
crates/game/src/components/: dino.rs  ground.rs  mod.rs  tree.rs
crates/game/tests/: bevy_example_test.rs
scripts/: main.ts  package.json  tsconfig.json
scripts/gh-actions/: ci-feedback.ts
src/: components.rs  dino.rs  e2e.rs  game_control.rs  game_logic.rs  ground.rs  lib.rs  main.rs  resources.rs  tree.rs
tests/: game_control.rs
todos/: 2025-10-5.ongoing.md
web/: _headers  index.html  loader.js  restart-audio-context.js  wasm-loader.js
workers/: pr-router.ts
