[workspace]
resolver = "2"
members = ["crates/e2e", "crates/game"]

[workspace.dependencies]
bevy = { version = "0.16.1", features = [
    "wayland",
    "bevy_remote",
    "bevy_dev_tools",
    "serialize",
] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
flume = { version = "0.11.1" }
dotenv = "0.15.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
opt-level = 3
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
