[package]
name = "dinosaur-api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum-test = "17"
tokio = { version = "1", features = ["full", "macros"] }
