[package]
name = "dinosaur-game"
version = "0.0.3"
edition = "2021"
build = "build.rs"

[dependencies]
bevy = { workspace = true }
log = { workspace = true }
bevy_kira_audio = { workspace = true }
bevy_asset_loader = { workspace = true }
rand = { workspace = true }
webbrowser = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
